
2013-02-15  Jaehwan Kim

        * Add the reorder effect in toolbar.

2013-02-15  Shinwoo Kim

        * Popup is now a focusable object.

2013-02-16  Paulo C. A. Cavalcanti Jr

        * Fix elm_config to properly check file type.

2013-02-16  ChunEon Park (Hermet)

        * Improve naviframe to not apply items'style multiple times.

2013-02-16  ChunEon Park (Hermet)

        * Don't handle the resize objects in widget infrastructure. Actually resize objects are sub objects so we don't need to care them separately. this causes overhead in some cases.

2013-02-17  Cedric Bail

        * Improve support on some 64bits system.

2013-02-17 Mike Blumenkrantz

        * ignore tab key widget focus change if control/alt is pressed
        * prevent blank entry hoversels

2013-02-17 Shinwoo Kim

        * Fix restacking issue on ctxpopup - resatck callback makes the bg object be top of ctxpopup.

2013-02-20 Carsten Haitzler (The Rasterman)

        * Fix gl engine vsync option pass-in in elm_win
        * Fix elm_progressbar_pulse() to abort if pulsing not enabled

2013-02-21 Carsten Haitzler (The Rasterman)

        * Improve a lot of the dnd infra to be more fully baked
        * Add elm_drop_target_add() elm_drop_target_del() and elm_drag_start()

2013-02-21  Jaehwan Kim

        * Fix scroller acceleration bug. It was accelerated even it's scrolled
        after finishing the previous scroll. This happens with page scroll enabled.

2013-02-25  Taehwan Kim

        * Fix 1byte invalid read & do memset, rewind if needed.

2013-02-26  Jaeun Choi

        * Add omit feature to elm_index.

2013-02-28  Jaehwan Kim

        * Add the option about sending signals in content_pos_set.
        When the scroller is resized, the signals("elm,action,scroll", "elm,edge,top" so on) shouldn't be sent,
        because it's not a scroll-action. So in this case, the content_pos_set should be called without the signals.