@@ -1071,3 +1071,7 @@
         * Add the option about sending signals in content_pos_set.
         When the scroller is resized, the signals("elm,action,scroll", "elm,edge,top" so on) shouldn't be sent,
         because it's not a scroll-action. So in this case, the content_pos_set should be called without the signals.
+
+2013-02-28  ChunEon Park (Hermet)
+
+        * Add elm_transit_smooth_set(), elm_transit_smooth_get()
